Remove ul tag from RecipeDetail to fix align issues

--- a/src/App.sass
+++ b/src/App.sass
@@ -21,6 +21,7 @@ body
 	border: 1px solid black
 	background-color: #d3d3d3
 	margin-bottom: 25px
+	padding: 0
 
 .recipe-list-item input 
 	margin: 10px
